--- a/supervisely_app/debug.env
+++ b/supervisely_app/debug.env
@@ -5,7 +5,7 @@ TASK_ID=12938
 context.teamId=282
 context.workspaceId=409
 
-modal.state.kittiPath="/kitti_360_test1/"
+modal.state.slyFolder="/kitti_360_test1/"
 
 DEBUG_APP_DIR="/Users/qanelph/Desktop/work/supervisely/app_debug_data"
 DEBUG_CACHE_DIR="/Users/qanelph/Desktop/work/supervisely/app_debug_cache"
