--- a/supervisely_app/config.json
+++ b/supervisely_app/config.json
@@ -5,7 +5,7 @@
     "import",
     "pointcloud"
   ],
-  "description": "Import PointCloud Episodes from KITTI-360 format",
+  "description": "Import Pointcloud Episodes from KITTI-360 format",
   "docker_image": "supervisely/base-py-sdk:6.6.2",
   "main_script": "supervisely_app/main.py",
   "task_location": "workspace_tasks",
