--- a/supervisely_app/config.json
+++ b/supervisely_app/config.json
@@ -11,7 +11,7 @@
   "task_location": "workspace_tasks",
   "isolate": true,
   "headless": true,
-  "icon": "https://imgur.com/zNN4EW7.png",
+  "icon": "https://imgur.com/aOcEQGm.png",
   "icon_cover": false,
   "icon_background": "#FFFFFF",
   "context_menu": {
