Set poster url in config.json

--- a/supervisely_app/config.json
+++ b/supervisely_app/config.json
@@ -15,6 +15,9 @@
   "icon_cover": false,
   "icon_background": "#FFFFFF",
   "context_menu": {
-    "target": ["files_folder"]
-  }
+    "target": [
+      "files_folder"
+    ]
+  },
+  "poster": "https://imgur.com/rj5eM40.jpg"
 }
