--- a/supervisely_app/config.json
+++ b/supervisely_app/config.json
@@ -3,7 +3,7 @@
   "type": "app",
   "categories": [
     "import",
-    "pointcloud"
+    "pointclouds"
   ],
   "description": "Import Pointcloud Episodes from KITTI-360 format",
   "docker_image": "supervisely/base-py-sdk:6.6.3",
