--- a/supervisely_app/config.json
+++ b/supervisely_app/config.json
@@ -6,7 +6,7 @@
     "pointclouds"
   ],
   "description": "Import Pointcloud Episodes from KITTI-360 format",
-  "docker_image": "supervisely/base-py-sdk:6.35.0",
+  "docker_image": "supervisely/import-export:0.0.1",
   "main_script": "supervisely_app/main.py",
   "task_location": "workspace_tasks",
   "isolate": true,
